added edit profile function, and changed url to valid one

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -15,5 +15,11 @@
   "email": "Email",
   "phone": "Phone",
   "user": "user",
-  "administratorRole": "Administrator"
+  "administratorRole": "Administrator",
+  "edit": "Edit",
+  "cancel": "Cancel",
+  "save": "Save",
+  "profileUpdated": "Profile updated successfully",
+  "updateFailed": "Failed to update profile",
+  "password": "Password"
 }
