--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -15,5 +15,11 @@
   "email": "Электронная почта",
   "phone": "Телефон",
   "user": "пользователь",
-  "administratorRole": "Администратор"
+  "administratorRole": "Администратор",
+  "edit": "Изменить",
+  "cancel": "Отменить",
+  "save": "Сохранить",
+  "profileUpdated": "Профиль успешно обновлен",
+  "updateFailed": "Не удалось обновить профиль",
+  "password": "Пароль"
 }
